[package]
name = "flush_reload"
version = "0.1.0"
edition = "2021"
authors = ["felipe.asimos@gmail.com"]
description = "Flush+Reload implemented in Javascript and WebAssembly"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "flush_reload"
path = "src/bin/main.rs"

[profile.release]
panic = "abort"
lto = true
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
