[package]
name = "flush_reload"
version = "0.1.0"
edition = "2021"
authors = ["felipe.asimos@gmail.com"]
description = "Flush+Reload implemented in Javascript and WebAssembly"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flush_reload"
path = "src/bin/main.rs"

[profile.release]
panic = "abort"
lto = true
wasm-opt = false

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
web-sys = { version = "0.3.67", features = ["console"] }
