[package]
name = "flush_reload"
version = "0.1.0"
edition = "2021"
authors = ["felipe.asimos@gmail.com"]
description = "Flush+Reload implemented in Javascript and WebAssembly"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
lto = true
wasm-opt = true
opt-level = 3
overflow-checks = false

[build]
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"] 
target = "wasm32-unknown-unknown"

[dependencies]
lol_alloc = "0.4.0"
